# cl-hubeau

./: .flake8  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  test.py
.github/workflows/: build_pages.yml  hubeau_coverage.py  publish.yml  test.yml
cl_hubeau/: __init__.py  config.py  constants.py  exceptions.py  frames.py
cl_hubeau/drinking_water_quality/: __init__.py  drinking_water_quality_scraper.py  utils.py
cl_hubeau/fish/: __init__.py  fish_scraper.py  utils.py
cl_hubeau/ground_water_quality/: __init__.py  ground_water_quality_scraper.py  utils.py
cl_hubeau/hydrobiology/: __init__.py  hydrobiology_scraper.py  utils.py
cl_hubeau/hydrometry/: __init__.py  hydrometry_scraper.py  utils.py
cl_hubeau/phytopharmaceuticals_transactions/: __init__.py  phytopharmaceuticals_scraper.py  utils.py
cl_hubeau/piezometry/: __init__.py  piezometry_scraper.py  utils.py
cl_hubeau/session/: __init__.py  session.py
cl_hubeau/superficial_waterbodies_quality/: __init__.py  superficial_waterbodies_quality_scraper.py  utils.py
cl_hubeau/utils/: __init__.py  cities_and_departments.py  cities_deps_regions.py  clean_cache.py  fill_missing_fields.py  hydro_perimeters_queries.py  mesh.py  postcodes.py  prepare_loops.py  tqdm_utils.py
cl_hubeau/water_abstraction/: __init__.py  abstraction_scraper.py
cl_hubeau/water_services/: __init__.py  utils.py  water_services_scraper.py
cl_hubeau/watercourses_flow/: __init__.py  utils.py  watercourses_flow_scraper.py
docs/: 404.html  Gemfile  _config.yml  about.md  clean_cache.md  coastal_waters.md  config.md  convenience_tools.md  drinking_water_quality.md  fish.md  ground_water_quality.md  hydrobiology.md  hydrometry.md  index.md  install.md  parallization.md  phytopharmaceuticals.md  piezometry.md  superficial_waterbodies_quality.md  temperatures.md  water_abstraction.md  watercourses_flow.md  waterservices-benchmark.md
docs/_sass/custom/: custom.scss
docs/use_cases/: index.md  usecase_1.md
tests/: conftest.py  test_drinking_water_quality.py  test_fish.py  test_ground_water_quality.py  test_hydrobiology.py  test_hydrometry.py  test_phytopharmaceuticals.py  test_piezometry.py  test_superficial_waterbodies_quality.py  test_utils.py  test_water_services.py  test_watercourses_flow.py  utils.py
