[tool.poetry]
name = "cl-hubeau"
version = "0.1.0"
description = "Hubeau client to collect data from the different APIs"
authors = ["Thomas Grandjean <thomas.grandjean@developpement-durable.gouv.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests-cache = "^1.2.1"
platformdirs = "^4.2.2"
diskcache = "^5.6.3"
importlib-metadata = "^8.2.0"
pebble = "^5.0.7"
pandas = "^2.2.2"
tqdm = "^4.66.4"
geopandas = "^1.0.1"


[tool.poetry.group.dev.dependencies]
spyder = "^5.5.5"
pytest = "^8.2.2"
black = "^24.4.2"
pyqt5-qt5 = "5.15.2"
pyqtwebengine-qt5 = "5.15.2"
matplotlib = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
