[tool.poetry]
name = "cl-hubeau"
version = "0.10.1"
description = "Hubeau client to collect data from the different APIs"
authors = [
    "Thomas Grandjean <thomas.grandjean@developpement-durable.gouv.fr>",
    "Alica Burlot <alica.burlot@developpement-durable.gouv.fr>",
    "Patrice Sauvage <patrice.sauvage@developpement-durable.gouv.fr>",
    ]
maintainers = [
    "Thomas Grandjean <thomas.grandjean@developpement-durable.gouv.fr>",
    ]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://tgrandje.github.io/cl-hubeau"
repository = "https://github.com/tgrandje/cl-hubeau/"
documentation = "https://tgrandje.github.io/cl-hubeau"
keywords = ["france", "water", "hydrology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]


[tool.poetry.dependencies]
python = "^3.9"
requests-cache = "^1.2.1"
platformdirs = "^4.2.2"
diskcache = "^5.6.3"
importlib-metadata = ">=6.0.0"
pebble = "^5.0.7"
pandas = "^2.2.2"
tqdm = "^4.66.4"
geopandas = "^1.0.1"
requests-ratelimiter = "^0.7.0"
pynsee = "^0.2.3"
french-cities = "^1.1.3"
deprecated = "^1.2.18"


[tool.poetry.group.dev.dependencies]
spyder = "^6.0.7"
pytest = "^8.2.2"
black = "^24.4.2"
pyqt5-qt5 = "5.15.2"
pyqtwebengine-qt5 = "5.15.2"
matplotlib = "^3.9.2"
licensecheck = "^2024.2"
jupyter = "^1.0.0"
pyproj = "^3.6.1"
debugpy = "1.8.2"
seaborn = "^0.13.2"
pre-commit = "^4.1.0"
flake8 = "^7.1.2"
vulture = "^2.14"
pytest-cov = "^6.0.0"
genbadge = {extras = ["all"], version = "^1.1.1"}
pytest-xdist = "^3.6.1"
filelock = "^3.17.0"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--cov-report xml:./reports/coverage/coverage.xml"

[tool.coverage.run]
omit = [
    "tests/*",
    ]

[tool.black]
include = '\.py$'
line-length = 79


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
